# dgn4cfd

dgn4cfd-main/: pyproject.toml
dgn4cfd-main/dgn4cfd/: __init__.py  datasets.py  graph.py  loader.py  metrics.py  plot.py
dgn4cfd-main/dgn4cfd/nn/: __init__.py  blocks.py  losses.py  model.py  training_settings.py
dgn4cfd-main/dgn4cfd/nn/diffusion/: __init__.py  diffusion_model.py  diffusion_process.py  step_sampler.py
dgn4cfd-main/dgn4cfd/nn/diffusion/models/: __init__.py  dgn.py  ldgn.py
dgn4cfd-main/dgn4cfd/nn/models/: __init__.py  bayesian.py  gaussian_mixture.py  multi_scale_gnn.py  vanilla.py  vgae.py
dgn4cfd-main/dgn4cfd/transforms/: __init__.py  cond.py  connect.py  copy.py  dirichlet.py  identity.py  mesh.py  scale.py
